SERVER-126381 Reject out-of-range $_internalJoinHint node ids at parse time (#55582)

GitOrigin-RevId: 360c6c333b0ccd36ed71a2cf29f00af830810144